--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/img/logos/LogoNasuti.png" />
     
+    <!-- Preload critical resources for better performance -->
+    <link rel="preload" href="/img/institucionales/GastonYSergio1.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/img/logos/NombreYLogoNasutiInmobiliaria.png" as="image" type="image/png" />
+    
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   </head>
   <body>
