feat: agregar meta tags de seguridad y PWA para mejor experiencia móvil
- Mejorar viewport con maximum-scale y user-scalable
- Agregar X-UA-Compatible para compatibilidad IE
- Agregar referrer policy para seguridad
- Agregar meta tags de Apple para PWA (iOS)
- Agregar meta tags de Microsoft para tiles (Windows)

Mejora seguridad, compatibilidad y experiencia móvil sin afectar funcionalidad.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
     
     <!-- Primary Meta Tags -->
     <title>Nasuti Inmobiliaria - 60 Años de Experiencia en Marcos Juárez</title>
@@ -74,6 +76,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    
+    <!-- Security and performance meta tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Nasuti Inmobiliaria" />
+    <meta name="msapplication-TileColor" content="#f0782c" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
   </head>
   <body>
     <div id="root"></div>
