feat: agregar manifest.json y browserconfig.xml para PWA
- Crear manifest.json para Progressive Web App
  - Configuración completa de PWA
  - Iconos y shortcuts
  - Mejora experiencia móvil y SEO

- Crear browserconfig.xml para Windows tiles
  - Configuración de tiles de Windows
  - Referenciado en meta tags existentes

- Agregar link a manifest en index.html

Mejora significativa en experiencia móvil y capacidad de instalación como PWA.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/img/logos/LogoNasuti.png" />
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    
     <!-- Preload critical resources for better performance -->
     <link rel="preload" href="/img/institucionales/GastonYSergio1.jpg" as="image" type="image/jpeg" />
     <link rel="preload" href="/img/logos/NombreYLogoNasutiInmobiliaria.png" as="image" type="image/png" />
