feat(seo): Agregar schemas adicionales, meta tags de verificación y optimización de imágenes
- Agregar schema Organization mejorado en landing page
- Agregar funciones para Review, AggregateRating, FAQPage schemas
- Preparar meta tags de verificación para Google Search Console y Bing
- Crear componente OptimizedImage para futura optimización
- Agregar guías de verificación SEO y optimización de imágenes

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
     <meta name="apple-mobile-web-app-title" content="Nasuti Inmobiliaria" />
     <meta name="msapplication-TileColor" content="#f0782c" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
+    
+    <!-- Search Engine Verification (Add your verification codes when available) -->
+    <!-- Google Search Console: Replace YOUR_GOOGLE_VERIFICATION_CODE with your actual code -->
+    <meta name="google-site-verification" content="ZKoe_kQvaSD9IDPDGNOCga2IM3X2YDWJlXeCzlie7jY" />
+    <!-- Bing Webmaster Tools: Replace YOUR_BING_VERIFICATION_CODE with your actual code -->
+    <!-- <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE" /> -->
   </head>
   <body>
     <div id="root"></div>
