Centralizar iconos en un solo archivo y mejorar animación del loader
- Crear archivo centralizado src/icons/index.ts para todos los iconos
- Actualizar todos los componentes para importar desde el archivo centralizado
- Cambiar icono de terreno de Square a Map
- Simplificar animación del PropertyLoader (solo escala, sin bounce)
- Corregir tipo LucideIcon por React.ComponentType
- Agregar meta tag mobile-web-app-capable

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     
     <!-- Security and performance meta tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Nasuti Inmobiliaria" />
