--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     />
     <meta
       property="og:image"
-      content="https://inmobiliarianasuti.com.ar/img/logos/NombreYLogoNasutiInmobiliaria.png"
+      content="https://inmobiliarianasuti.com.ar/img/logos/Logo.png"
     />
     <meta property="og:site_name" content="Nasuti Inmobiliaria" />
     <meta property="og:locale" content="es_AR" />
@@ -62,14 +62,14 @@
     />
     <meta
       name="twitter:image"
-      content="https://inmobiliarianasuti.com.ar/img/logos/NombreYLogoNasutiInmobiliaria.png"
+      content="https://inmobiliarianasuti.com.ar/img/logos/Logo.png"
     />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://inmobiliarianasuti.com.ar/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/logos/LogoNasuti.png" />
+    <link rel="icon" type="image/png" href="/img/logos/Logo.png" />
 
     <!-- Preload critical resources for better performance -->
     <link
@@ -80,7 +80,7 @@
     />
     <link
       rel="preload"
-      href="/img/logos/NombreYLogoNasutiInmobiliaria.png"
+      href="/img/logos/Logo.png"
       as="image"
       type="image/png"
     />
